RESOLVED FIXED132901
[getUserMedia] getUserMedia() errorCallback MUST be validated
https://bugs.webkit.org/show_bug.cgi?id=132901
Summary [getUserMedia] getUserMedia() errorCallback MUST be validated
Kiran
Reported 2014-05-14 03:56:39 PDT
Validation for getUserMedia() errorCallback is missing. According to spec, successCallBack and errorCallBack are non-nullable and mandatory [1]. But code is validating successCallBack but missing to validate errorCallBack. [1] http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-NavigatorUserMedia-getUserMedia-void-MediaStreamConstraints-constraints-NavigatorUserMediaSuccessCallback-successCallback-NavigatorUserMediaErrorCallback-errorCallback
Attachments
Validation missing for getUserMedia errorCallBack (5.08 KB, patch)
2014-05-14 04:12 PDT, Kiran
no flags
Kiran
Comment 1 2014-05-14 04:12:48 PDT
Created attachment 231442 [details] Validation missing for getUserMedia errorCallBack Please review the patch for validating getUserMedia errorCallback.
WebKit Commit Bot
Comment 2 2014-05-14 09:59:45 PDT
Comment on attachment 231442 [details] Validation missing for getUserMedia errorCallBack Clearing flags on attachment: 231442 Committed r168842: <http://trac.webkit.org/changeset/168842>
WebKit Commit Bot
Comment 3 2014-05-14 09:59:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.