alidation for getUserMedia() errorCallback is missing. https://bugs.webkit.org/show_bug.cgi?id=132901

Patch by Kiran <kiran.guduru@samsung.com> on 2014-05-14
Reviewed by Darin Adler.

Source/WebCore:
The patch adds the validation for getUserMedia errorCallBack
and throws TypeMismatchError.

Test: fast/mediastream/getusermedia.html

* Modules/mediastream/NavigatorUserMedia.cpp:
(WebCore::NavigatorUserMedia::webkitGetUserMedia):

LayoutTests:
This test checks for null values in getUserMedia errorCallback.

* fast/mediastream/getusermedia.html:

Canonical link: https://commits.webkit.org/150968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168842 268f45cc-cd09-0410-ab3c-d52691b4dbfc